# reptar

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pylint-git-dirty.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: codecov.yml  deploy-docs.yml  linter.yml  python-package.yml  python-publish-test.yml  python-publish.yml  python-tests.yml
docs/: .pages  branch-build-docs.sh  build-docs.sh  calculators.md  calculators.rst  convert_definitions.py  creator.rst  descriptors.rst  file.md  file.rst  gen_ref_pages.py  parsers-extractors.rst
docs/.overrides/: main.html
docs/_static/: index.js  launcher.css
docs/_templates/: page.html  versions.html
docs/_templates/launcher/: buttons.html  launch-this.html
docs/css/: 3dmol.css  base.css  colors.css
docs/definitions/: md.rst  molprop.rst  qc.rst  xtb.rst
docs/developing/: contributing.md  index.md  setup-environment.md
docs/files/30h2o-md/: 30h2o-gfn2-opt.xyz
docs/scripts/: reptar-geometry-scan.rst  reptar-xyz-to-file.rst
docs/source/: calculators.rst  conf.py  contributing.rst  creator.rst  data.rst  definitions.rst  descriptors.rst  file.rst  index.rst  many-body-expansion.rst  parsers-extractors.rst  sampling.rst  scripts.rst  writers.rst
docs/source/_static/: printing.css
docs/source/_templates/: README.md  base.html
docs/source/_templates/components/: save-this-page.html
docs/source/api/: Creator.rst  Data.rst  Sampler.rst  Saver.rst  file.rst  modules.rst
docs/source/api/calculator-api/: Data.rst  Driver.rst  DriverEnGrad.rst  DriverEnergy.rst  DriverOpt.rst  Saver.rst  calculator-module.rst  driverENERGY.rst  driverENGRAD.rst  driverOPT.rst  psi4_energy.rst  psi4_engrad.rst  psi4_opt.rst  psi4_worker.rst  xtb_engrad.rst  xtb_opt.rst
docs/source/api/creating-api/: creating-module.rst  identify_parser.rst  identify_trajectory.rst
docs/source/api/creator-api/: creator-module.rst  creator.rst  identify_parser.rst  identify_trajectory.rst
docs/source/api/descriptors/: com_distance_sum.rst  criteria.rst  descriptors.rst  get_center_of_mass.rst  max_atom_pair_dist.rst
docs/source/api/exceptions/: MissingDataException.rst  exceptions.rst
docs/source/api/extractors-api/: Extractor.rst  ExtractorASE.rst  ExtractorCREST.rst  ExtractorORCA.rst  ExtractorXTB.rst  extractor.rst  extractorASE.rst  extractorCREST.rst  extractorORCA.rst  extractorXTB.rst  extractors-module.rst
docs/source/api/fragment/: fragment.rst  pairwise_distance.rst
docs/source/api/logger/: ReptarLogger.rst  logger_module.rst  set_log_level.rst
docs/source/api/parsers-api/: Parser.rst  ParserASE.rst  ParserCREST.rst  ParserORCA.rst  ParserXTB.rst  parse_cube.rst  parser.rst  parserASE.rst  parserCREST.rst  parserORCA.rst  parserXTB.rst  parsers-module.rst
docs/source/api/periodic/: cell.rst  periodic_module.rst
docs/source/api/sampler/: Sampler.rst  _generate_structure_samples.rst  _initialize_structure_sampling_arrays.rst  add_structures_to_group.rst  entity_mask_gen.rst  r_from_entities.rst  sample_structures.rst  sampler.rst  sampler_module.rst
docs/source/api/sampling/: _generate_structure_samples.rst  entity_mask_gen.rst  r_from_entities.rst  sampling_module.rst
docs/source/api/structure/: TopologyCheck.rst  create_grid.rst  get_angle_mask.rst  get_atomic_radii.rst  get_covalent_h_bonds.rst  get_topology_change.rst  identify_bonds.rst  is_bonded_atomic_radii.rst  sample_angles.rst  (+2 more)
docs/source/data/: data.rst  xtb-data.rst
docs/source/definitions/: base.rst  definitions.rst  md.rst  molprop.rst  pes.rst  qc.rst  sampling.rst  solv.rst  xtb.rst
docs/source/developing/: contributing.rst  setup-environment.md
docs/source/examples/: examples.rst
docs/source/scripts/: reptar-calc.rst  reptar-geometry-scan.rst  reptar-write-xyz.rst  scripts.rst
docs/source/tutorials/: tutorials.rst
examples/: README.md
reptar/: __init__.py  _version.py  creating.py  creator.py  data.py  descriptors.py  fragment.py  logger.py  manager.py  mb.py  periodic.py  reptar_file.py  sampler.py  sampling.py  save.py  saver.py  utils.py
reptar/analysis/: __init__.py  md.py
reptar/calculators/: __init__.py  cube.py  data.py  drivers.py  engrads.py  psi4_calc.py  psi4_workers.py  run.py  save.py  utils.py  xtb_workers.py
reptar/definitions/: base.yaml  md.yaml  molprop.yaml  pes.yaml  qc.yaml  sampl.yaml  sampling.yaml  solv.yaml  xtb.yaml
reptar/extractors/: __init__.py  ase_extractor.py  crest_extractor.py  extractor.py  orca_extractor.py  xtb_extractor.py
reptar/parsers/: __init__.py  ase_parser.py  crest_parser.py  extractor.py  gaussian_cube.py  orca_extractor.py  orca_parser.py  parser.py  xtb_extractor.py  xtb_parser.py
reptar/structure/: angles.py  bond.py  scan.py  topology.py
reptar/writers/: __init__.py  ase_db.py  forcebalance.py  pdb.py  schnetpack_db.py  text_writer.py  writer.py  writing_utils.py  xyz.py  xyz_gap.py
scripts/: reptar-calc  reptar-psi4-opt  reptar-write-xyz  reptar-xtb-opt  reptar-xyz-to-file
scripts/configs/: reptar-psi4-opt-config.yaml  reptar-xtb-opt-config.yaml
tests/: conftest.py  paths.py  test_calculators_cube.py  test_calculators_psi4.py  test_calculators_xtb.py  test_creator_ase.py  test_creator_crest.py  test_creator_orca.py  test_creator_xtb.py  test_descriptors.py  test_file.py  test_many_body.py  test_sampling.py  test_scripts_reptar_calc.py  test_scripts_reptar_geometry_scan.py  test_scripts_reptar_structure_angles.py  test_structure.py  test_writer_ase_db.py  test_writer_forcebalance.py  test_writer_pdb.py  test_writer_schnetpack_db.py  test_writer_xyz.py  test_writer_xyz_gap.py  utils.py
tests/data/1h2o_120meoh_md.exdir/: attributes.yaml
tests/data/h2o-temelso.etal.exdir/: exdir.yaml
tests/data/script-configs/: config-gfp-cro-scan.yaml  config-psi4-engrads.yaml
(+219 files in other folders)
