[metadata]
name = reptar
author = Alex M. Maldonado
author_email = aalexmmaldonado@gmail.com
description = A tool for storing and analyzing manuscript-scale computational chemistry data
license = MIT license
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: System :: Archiving

[options]
python_requires= >=3.7

[versioneer]
VCS = git
style = pep440-old
versionfile_source = reptar/_version.py
versionfile_build = reptar/_version.py
tag_prefix = ''

[pylint]
max-line-length = 88
