[metadata]
name = reptar
author = OASCI
author_email = us@oasci.org
description = Compute, store, and analyze manuscript-scale data for computational chemistry and biology
license = MIT license
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires= >=3.9

[versioneer]
VCS = git
style = pep440-old
versionfile_source = reptar/_version.py
versionfile_build = reptar/_version.py
tag_prefix = ''
